--- a/home.html
+++ b/home.html
@@ -10,14 +10,15 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand navbar-light flex-column flex-md-row bd-navbar">
-        <a class="navbar-brand" href="#">LOGO</a>
+    <header class="navbar navbar-expand flex-column flex-md-row bd-navbar">
+<!--        <a class="navbar-brand" href="#">LOGO</a>-->
         <div class="navbar-nav-scroll">
             <ul class="navbar-nav bd-navbar-nav flex-row">
-                <li class="nav-item"><a class="nav-link">SHOP</a> </li>
-                <li class="nav-item"><a class="nav-link">CONTANT</a> </li>
-                <li class="nav-item"><a class="nav-link">ABOUT</a> </li>
-                <li class="nav-item"><a class="nav-link">LOGIN</a> </li>
+                <li class="nav-item"><a href="HOME.html" "nav-link">LOGO</a> </li>
+                <li class="nav-item"><a href="SHOP.html" "nav-link">SHOP</a> </li>
+                <li class="nav-item"><a href="CONTACT.html" "nav-link">CONTACT</a> </li>
+                <li class="nav-item"><a href="ABOUT.html" "nav-link">ABOUT</a> </li>
+                <li class="nav-item"><a href="LOGIN.html" "nav-link">LOGIN</a> </li>
             </ul>
             <ul class="navbar-nav ml-md-auto">
                 <li class="nav-item">
